@@ -40,14 +40,12 @@ class Permission  implements Serializable {
     static hasMany = [aePermissions:AclEntryPermission]
 
     String name
-    String description
 
     void toXmlElement(Element root){
         Element permission = root.addElement("permission");
         permission.addElement("id").addText(String.valueOf(getId()) );
         permission.addElement("name").addText(  LocalMessage.loc(getName()));
         permission.addElement("sysName").addText(getName());
-        permission.addElement("description").addText( LocalMessage.loc(getDescription()));
     }
 
     boolean equals(o) {
@@ -56,16 +54,12 @@ class Permission  implements Serializable {
 
         Permission that = (Permission) o
 
-        if (description != that.description) return false
         if (name != that.name) return false
 
         return true
     }
 
     int hashCode() {
-        int result
-        result = (name != null ? name.hashCode() : 0)
-        result = 31 * result + (description != null ? description.hashCode() : 0)
-        return result
+        return (name != null ? name.hashCode() : 0)
     }
 }
